<resources>
    <string name="app_name">Tennis Score</string>
    <string name="create_game">Create New Match</string>
    <string name="add_player">Add Player +</string>
    <string name="start_game">Start Match</string>
    <string name="default_gamescore">0 : 0</string>
    <string name="default_setscore">%1$d : %2$d</string>
    <string name="default_scoretitle">Game:</string>
    <string name="setscore_title">Current Set:</string>
    <string name="tiebreak_scoretitle">Tiebreak:</string>
    <string name="endmatch_button">End Match</string>
    <string name="nomatches_filler">No Matches Played</string>
    <string name="startmatch_title">Select Players</string>
    <string name="startmatch_description">Enter Names for Player 1 and Player 2</string>
    <string name="label_nameP1">Player 1:</string>
    <string name="label_nameP2">Player 2:</string>
</resources>