<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartMatchActivity">

    <Button
        android:id="@+id/startmatchbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:layout_margin="30dp"
        android:enabled="false"
        app:layout_constraintHeight="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/startmatch_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startmatch_title"
        android:textSize="40sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/startmatch_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startmatch_description"
        android:textSize="14sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/startmatch_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/label_nameP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nameP1"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/startmatch_nameP1"
        />

    <EditText
        android:id="@+id/startmatch_nameP1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_nameP1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/label_nameP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nameP2"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/startmatch_nameP2"
        />

    <EditText
        android:id="@+id/startmatch_nameP2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/startmatch_nameP1"
        app:layout_constraintStart_toEndOf="@+id/label_nameP1"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>