<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchActivity">

    <Button
        android:id="@+id/addPointP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Player1 +"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addPointP2"
        app:layout_constraintTop_toBottomOf="@id/setScore"

        android:layout_marginEnd="4dp"/>

    <Button
        android:id="@+id/addPointP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="Player2 +"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addPointP1"
        app:layout_constraintTop_toBottomOf="@id/setScore"/>
    <Button
        android:id="@+id/endMatchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:text="@string/endmatch_button"
        android:theme="@style/EndButton"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/nameP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/addPointP1"
        app:layout_constraintBottom_toTopOf="@+id/addPointP1"
        app:layout_constraintEnd_toEndOf="@+id/addPointP1"/>

    <TextView
        android:id="@+id/nameP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/addPointP2"
        app:layout_constraintBottom_toTopOf="@+id/addPointP2"
        app:layout_constraintEnd_toEndOf="@+id/addPointP2"/>

    <TextView
        android:id="@+id/scoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_scoretitle"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/gameScore"
        app:layout_constraintTop_toBottomOf="@+id/addPointP1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/gameScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:text="@string/default_gamescore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/setscore_title"
        app:layout_constraintBottom_toTopOf="@+id/setScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/setScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/default_setscore"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TableLayout
        android:id="@+id/setOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameScore"
        app:layout_constraintBottom_toTopOf="@+id/endMatchButton">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"/>
        <TableRow>
            <TextView
                android:id="@+id/nameP1Table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                />
            <TextView
                android:id="@+id/nameP2Table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>